frontend/src/create-session/create-session.module.css
/* ... */
.basic-button:focus, .footer-button:focus, .dialog-button:focus {
  outline: 0;
}

.basic-button:hover, .footer-button:hover, .dialog-button:hover {
  -webkit-box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.2), 0 12px 12px -4px rgba(42, 23, 74, 0.2);
          box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.2), 0 12px 12px -4px rgba(42, 23, 74, 0.2);
}

.basic-button:active, .footer-button:active, .dialog-button:active {
  -webkit-box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.08), 0 6px 6px -4px rgba(42, 23, 74, 0.24);
          box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.08), 0 6px 6px -4px rgba(42, 23, 74, 0.24);
}

.button-side-container {
  display: flex;
}

.delete-button {
  width: 100%;
  text-align: center;
  border-radius: 26px;
  border: none;
  padding: 12px 16px 12px 16px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  cursor: pointer;
  -webkit-box-shadow: 0 0 8px 0 rgba(42, 23, 74, 0.2), 0 8px 8px -4px rgba(42, 23, 74, 0.2);
          box-shadow: 0 0 8px 0 rgba(42, 23, 74, 0.2), 0 8px 8px -4px rgba(42, 23, 74, 0.2);
  -webkit-transition: -webkit-box-shadow 0.2s ease-in-out;
  transition: -webkit-box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
  font-family: 'SST', sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #ffffff;
  background: #b3261e;
}

.delete-button:focus {
  outline: 0;
}

.delete-button:hover {
  -webkit-box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.2), 0 12px 12px -4px rgba(42, 23, 74, 0.2);
          box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.2), 0 12px 12px -4px rgba(42, 23, 74, 0.2);
}

.delete-button:active {
  -webkit-box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.08), 0 6px 6px -4px rgba(42, 23, 74, 0.24);
          box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.08), 0 6px 6px -4px rgba(42, 23, 74, 0.24);
}

.cancel-button {
  width: 100%;
  border-radius: 26px;
  border: none;
  background: transparent;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  padding: 12px 16px 12px 16px;
  cursor: pointer;
  -webkit-transition: -webkit-box-shadow 0.2s ease-in-out;
  transition: -webkit-box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
  font-family: 'SST', sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #5b3a94;
}

.cancel-button:focus {
  outline: 0;
}

.pod-button {
  border-radius: 18px;
  border: none;
  fill: #3a2163;
  background: transparent;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  padding: 12px 16px 12px 16px;
  cursor: pointer;
  -webkit-transition: -webkit-box-shadow 0.2s ease-in-out;
  transition: -webkit-box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
  font-family: 'SST', sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #5b3a94;
}

.pod-button:focus {
  outline: 0;
}

.pod-button .light-svg {
  margin-top: 5px;
}

.pod-overview-button {
  position: relative;
  -webkit-box-flex: 0;
      -ms-flex: none;
          flex: none;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  font-family: 'SST', sans-serif;
  font-weight: 700;
  font-size: 17px;
  line-height: 24px;
  color: #221a33;
  width: 150px;
  height: 150px;
  background-color: #f5f3f9;
  border-radius: 4px;
  margin-bottom: 16px;
  margin-left: 8px;
  margin-right: 8px;
  -webkit-box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.2), 0 8px 8px -4px rgba(42, 23, 74, 0.2);
          box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.2), 0 8px 8px -4px rgba(42, 23, 74, 0.2);
  -webkit-transition: -webkit-box-shadow 0.2s ease-in-out;
  transition: -webkit-box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
}

.pod-overview-button:hover {
  cursor: pointer;
  background-color: #FFFFFF;
  -webkit-box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.2), 0 12px 12px -3px rgba(42, 23, 74, 0.2);
          box-shadow: 0 0 2px 0 rgba(42, 23, 74, 0.2), 0 12px 12px -3px rgba(42, 23, 74, 0.2);
}

.pod-overview-button *::-moz-selection {
  background: none;
}

.pod-overview-button *::selection {
  background: none;
}

.pod-overview-button .pod-overview-icon {
  margin-top: 15px;
}

.svgpulse {
  -webkit-animation: svgpulse 1s ease-out infinite;
          animation: svgpulse 1s ease-out infinite;
}

@-webkit-keyframes svgpulse {
  0% {
    stroke-width: 0;
    r: 31.5;
  }
  15% {
    stroke-width: 0;
    r: 31.5;
  }
  100% {
    stroke-width: 8;
    r: 35.5;
  }
}

@keyframes svgpulse {
  0% {
    stroke-width: 0;
    r: 31.5;
  }
  15% {
    stroke-width: 0;
    r: 31.5;
  }
  100% {
    stroke-width: 8;
    r: 35.5;
  }
}

.dc-checkbox {
  display: block;
  position: relative;
  margin-bottom: 12px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.dc-checkbox input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

.checkmark {
  position: absolute;
  right: 0;
  height: 25px;
  width: 25px;
  background-color: #eee;
  border-radius: 50%;
}

.dc-checkbox input:checked ~ .checkmark {
  background-color: #3a2163;
}

.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

.dc-checkbox input:checked ~ .checkmark:after {
  display: block;
}

.dc-checkbox .checkmark:after {
  top: 9px;
  left: 9px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: white;
}
/* ... */

